--- a/thesis.bib
+++ b/thesis.bib
@@ -2827,3 +2827,42 @@ for Global Competitiveness},
   title = {Ab Initio Evaluation of Henry Coefficients Using Importance Sampling},
   journal = {J. Chem. Theo. Comput.}
 }
+@article{voronoi_radical,
+  title = {Network Approach to Void Percolation in a Pack of Unequal Spheres},
+  author = {van der Marck, S. C.},
+  journal = {Phys. Rev. Lett.},
+  volume = {77},
+  issue = {9},
+  pages = {1785--1788},
+  numpages = {0},
+  year = {1996},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.77.1785},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.77.1785}
+}
+@article{voronoi_apollonian,
+  title = {Three-Dimensional Apollonian Packing as a Model for Dense Granular Systems},
+  author = {Anishchik, S. V. and Medvedev, N. N.},
+  journal = {Phys. Rev. Lett.},
+  volume = {75},
+  issue = {23},
+  pages = {4314--4317},
+  numpages = {0},
+  year = {1995},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.75.4314},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.75.4314}
+}
+@article{aurenhammer_1987,
+author = {Aurenhammer, F.},
+title = {Power Diagrams: Properties, Algorithms and Applications},
+journal = {SIAM Journal on Computing},
+volume = {16},
+number = {1},
+pages = {78-96},
+year = {1987},
+doi = {10.1137/0216006},
+URL = {https://doi.org/10.1137/0216006},
+}
